[tool.poetry]
name = "dvartk"
version = "0.1.4"
description = ""
authors = ["Seongmin Choi <soymintc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.16.0"}
pandas = "^1.3.4"
numpy = "^1.21.6"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
pyfaidx = "^0.6.4"

[tool.scriv]
format = "md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
